// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Account /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG dpasoj"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG dpasoj"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo sooGH account__button"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 2`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo sooGH account__button"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutError 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo sooGH account__button"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutResult 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo sooGH account__button"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with loggingOut=true 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo sooGH account__button"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo gBoQVO outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-hHLeRK la-DPV"
        >
          Logout
        </span>
        <div
          aria-hidden="true"
          class="sc-dmRaPn etefHp"
        >
          <div
            class="sc-fEOsli eGfMJp"
          >
            <div
              class="sc-bjUoiL dChIjH"
            />
            <div
              class="sc-bjUoiL jtDPGv"
            />
            <div
              class="sc-bjUoiL csSmvg"
            />
            <div
              class="sc-bjUoiL fQKStd"
            />
            <div
              class="sc-bjUoiL eZeiia"
            />
            <div
              class="sc-bjUoiL hgvuZX"
            />
            <div
              class="sc-bjUoiL eBAgKT"
            />
            <div
              class="sc-bjUoiL bkrIvf"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with no user 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="sc-ksZaOG duCsur"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG dpasoj"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-ksZaOG dpasoj"
    >
      <div
        class="sc-hAZoDl bQWNOe"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailError 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo sooGH account__button"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailResult 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo sooGH account__button"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestingVerificationEmail=true 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo fWHeaH account__button"
        disabled=""
        type="button"
      >
        <span
          class="sc-hHLeRK la-DPV"
        >
          Get a new verification email
        </span>
        <div
          aria-hidden="true"
          class="sc-dmRaPn etefHp"
        >
          <div
            class="sc-fEOsli eGfMJp"
          >
            <div
              class="sc-bjUoiL dChIjH"
            />
            <div
              class="sc-bjUoiL jtDPGv"
            />
            <div
              class="sc-bjUoiL csSmvg"
            />
            <div
              class="sc-bjUoiL fQKStd"
            />
            <div
              class="sc-bjUoiL eZeiia"
            />
            <div
              class="sc-bjUoiL hgvuZX"
            />
            <div
              class="sc-bjUoiL eBAgKT"
            />
            <div
              class="sc-bjUoiL bkrIvf"
            />
          </div>
        </div>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with user with emailVerified=true 1`] = `
<div>
  <div
    class=""
  >
    <h1
      class="sc-bczRLJ hDLBIv sc-jqUVSM cFomsy"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;
